# mujoco_web

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  compose.yaml  index.html  install-deps.sh  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
docs/: mujoco.md
install-deps/libccd/: install-libccd.sh
install-deps/libccd/patch/: 0001-no-libm.patch  0001-nolibm.patch
install-deps/mujoco/: install-mujoco.sh
install-deps/mujoco/patch/: 0001-no-png.patch
install-deps/mujoco/patch-2.3.3/: 0002-quicksort.patch  0005-no-ccd-fetch.patch
install-deps/mujoco/patch-2.3.7/: 0001-no-png.patch  0003-static-asserts.patch
install-deps/mujoco/patch-3.2.0/: 0002-quicksort.patch
install-deps/mujoco/patch-3.2.4/: 0001-no-png.patch  0004-time.patch
mujoco/: CMakeLists.txt
mujoco/cmake/: fixWasm.cmake
mujoco/lodepng/: CMakeLists.txt
mujoco/lodepng/cmake/: lodepngConfig.cmake.in
mujoco/patches/: README.md
mujoco/patches/mujoco-3.2.4/: 0001-no-png.patch
mujoco/patches/mujoco-3.2.5/: README.md
mujoco/src/: main.cpp  model.h
mujoco_web/: .gitignore  CMakeLists.txt  index.html  package.json  tsconfig.app.json
mujoco_web/docs/: react.md
mujoco_web/mujoco/: CMakeLists.txt
mujoco_web/mujoco/lodepng/: README.md
mujoco_web/mujoco/patches/: README.md
mujoco_web/mujoco/patches/libccd-2.1/: 0001-no-libm.patch
mujoco_web/mujoco/src/: model.h
mujoco_web/patches/mujoco-3.2.4/: 0004-time.patch  0005-no-ccd-fetch.patch
mujoco_web/src/: App.tsx  index.css  main.cpp  model.h  simulation.h  state.h
mujoco_web/src/components/: CodeEditor.tsx  DebugOverlay.tsx  DragInteraction.tsx  Mujoco.tsx  Scene.tsx  SceneSelector.tsx  SimulationOverlay.tsx  UpdateProps.ts  dragStateManager.ts  threeUtils.ts
mujoco_web/src/types/: BodyInfo.ts
public/examples/scenes/: spot_tire.xml
public/examples/scenes/agility_cassie/: cassie.xml
public/examples/scenes/spot/: spot.xml
public/examples/scenes/spot/spot_components/: actuators_sensors.xml  arm.xml  assets.xml  cartire.xml  contact.xml  params_and_default.xml
public/wasm/: mujoco_web.js  mujoco_web.wasm
scripts/: input.txt  output.txt  run.py
src/: App.tsx  Mujoco.tsx
src/components/: Mujoco.tsx  MujocoComponent.tsx  MujocoContainer.ts  main.js  mujocoDemo.ts  mujocoLoader.ts  mujocoUtils.ts  sceneLoader.ts  threeUtils.ts  utils.ts
src/hooks/: useMujocoModule.ts
src/types/: mujoco_wasm.d.ts
src/wasm/: mujoco_enums.ts  mujoco_model_enums.ts  mujoco_wasm.d.ts
